# sigil

./: .gitignore  CONTEXT.md  README.md  docker-compose.yml  package-lock.json  package.json
collector/: package.json  tsconfig.json  vite.config.ts
collector/src/: collector.ts  index.ts
collector/tests/: audio.test.ts  canvas.test.ts  fonts.test.ts  identify.test.ts  simple-signals.test.ts  webgl.test.ts
dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  api.test.ts  api.ts  auth.tsx  styles.css
docs/: integration-guide.md  prd-admin-api-auth.md  prd-geolocation-ip-api-migration.md  prd-playground.md
docs/adr/: 0001-structured-similarity-over-vector-embeddings.md  0002-admin-token-env-var-over-api-key-auth.md  0002-ip-api-geolocation-fail-open.md
docs/issues/: playground-01-scaffold.md  playground-02-signals-only.md  (+3 more)
playground/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
server/: .dockerignore  Dockerfile  pyproject.toml
server/migrations/: 001_initial.sql  002_api_keys.sql  003_account_bindings.sql  004_geolocation_history.sql
server/src/sigil_server/: db.py  geolocation.py  main.py  models.py  retention.py  scoring.py  startup.py
server/tests/: conftest.py  test_account_bindings.py  test_api_keys.py  test_config.py  test_gdpr.py  test_geolocation.py  test_geolocation_integration.py  test_geolocation_ip_api_resolver.py  test_health.py  test_identify.py  test_investigation.py  test_migrations.py  test_scoring.py  test_signal_validation.py  test_similarity.py  test_startup.py
(+20 files in other folders)
